; ModuleID = '/home/carl/AnghaBench/linux/tools/virtio/ringtest/extr_ptr_ring.c_get_buf.c'
source_filename = "/home/carl/AnghaBench/linux/tools/virtio/ringtest/extr_ptr_ring.c_get_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tailcnt = common dso_local global i64 0, align 8
@headcnt = common dso_local global i64 0, align 8
@array = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"Buffer\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_buf(i32* %0, i8** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load i64, i64* @tailcnt, align 8
  %7 = load i64, i64* @headcnt, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = call i64 @__ptr_ring_full(i32* @array)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %9, %2
  store i8* null, i8** %5, align 8
  br label %16

13:                                               ; preds = %9
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %14 = load i64, i64* @tailcnt, align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* @tailcnt, align 8
  br label %16

16:                                               ; preds = %13, %12
  %17 = load i8*, i8** %5, align 8
  ret i8* %17
}

declare dso_local i64 @__ptr_ring_full(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
